--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,46 @@
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
+.card {
+  padding: 2em;
+}
+
+.read-the-docs {
+  color: #888;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -5,7 +48,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* background-color: #242424; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -18,6 +61,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -27,10 +71,8 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  /* min-width: 320px; */
   min-width: 100vw;
   min-height: 100vh;
-  /* height: 100%; */
 }
 
 h1 {
@@ -74,16 +116,30 @@ button:focus-visible {
 .header-nav-links {
   display: flex;
   justify-content: space-around;
+  margin-top: 5vh;
+  margin-bottom: 6vh;
 }
 
 .image-size {
-  width: 200px; /* Use 100% width to make sure it respects the parent's size */
-  height: 150px; /* Adjust as needed */
+  width: 330px; 
+  height: 250px; 
 }
 
 .projects-container {
   display: flex;
   justify-content: space-around;
+}
+
+.single-description-container {
+  max-width: 30%;
+  margin: 0 60px;
+}
+
+.single-project-container {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  margin: 0px 30px;
 }
 
 .dark-mode .moon-sun::before {
@@ -105,4 +161,96 @@ button:focus-visible {
   display:flex;
   justify-content: center;
   align-items: baseline;
+}
+
+.all-intro-container {
+  margin-right: 20px;
+}
+
+input {
+  background: white;
+  color: black;
+  width: 460px;
+  height: 30px;
+  margin-top: 10px;
+}
+
+.inquires {
+  height: 60px;
+  margin-bottom: 50px;
+}
+
+label {
+  margin-top: 30px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.profile {
+  object-fit: cover;
+  max-width: 30vw;
+  max-height: 100vh;
+  margin-right: 3vw;
+  margin-top: 8vh;
+  border-radius: 200px 200px 0 0;
+}
+
+.profile-and-intro-container {
+  display: flex;
+  align-items: center;
+}
+
+.icon {
+  /* overflow-clip-margin: content-box; */
+  overflow: hidden;
+  max-width: 21px;
+  max-height: 26px;
+  margin-right: 20px;
+}
+
+.prof-link-design {
+  display:flex;
+  align-items: center;
+}
+
+.professional-links {
+  display: inline-flex;
+  justify-content: center;
+}
+
+.example-testimonials {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+@media (max-width: 1090px) {
+  .projects-container {
+    display: flex;
+    flex-direction: column;
+  }  
+  .project {
+    margin: 30px 0;
+  }
+}
+
+@media (max-width: 807px) {
+  .profile-and-intro-container {
+    display: flex;
+    flex-direction: column;
+  }
+  .profile {
+    max-width: 330px;
+    max-height: 410px;
+  }
+}
+
+@media (max-width: 340px) {
+  .header-nav-links {
+    display: flex;
+    flex-direction: column;
+  }
 }
